--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -19,22 +19,23 @@
       <div class="row">
         <div class="col-sm-2">
           {% block sidebar %}
-            <ul class="sidebar-nav">
-              <li><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="{% url 'books' %}">All books</a></li>
-              <li><a href="">All authors</a></li>
-            </ul>
-            <ul class="sidebar-nav">
+          <ul class="sidebar-nav">
+            {% if user.is_authenticated %}
+            <li>User: {{ user.get_username }}</li>
 
-              …
+            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
 
-             {% if user.is_authenticated %}
-               <li>User: {{ user.get_username }}</li>
-               <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-             {% else %}
-               <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-             {% endif %}
-            </ul>
+            <li>
+              <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-link">Logout</button>
+              </form>
+            </li>
+            {% else %}
+            <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+            {% endif %}
+          </ul>
+
 
           {% endblock %}
         </div>
