--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -38,6 +38,17 @@
 
 
           {% endblock %}
+          {% if user.is_staff %}
+            <hr>
+            <ul class="sidebar-nav">
+            <li>Staff</li>
+              <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+            {% if perms.catalog.add_author %}
+              <li><a href="{% url 'author-create' %}">Create author</a></li>
+            {% endif %}
+            </ul>
+            {% endif %}
+
         </div>
         <div class="col-sm-10 ">{% block pagination %}
           {% if is_paginated %}
